--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                     tile.classList.add('empty');
                     // No image: empty space is transparent until puzzle is solved
                 } else {
-                    tile.style.backgroundImage = `url('Images2/tile-${piece}.jpg')`;
+                    tile.style.backgroundImage = `url('Images2/tile_${piece}.jpg')`;
                     tile.onclick = () => moveTile(index);
                 }
                 
@@ -759,7 +759,7 @@
             const puzzleRevealText = document.getElementById('puzzleRevealText');
             const puzzleFullImageOverlay = document.getElementById('puzzleFullImageOverlay');
             const emptyTile = puzzleGrid.querySelector('.puzzle-tile.empty');
-            if (emptyTile) emptyTile.style.backgroundImage = "url('Images2/tile-3.jpg')";
+            if (emptyTile) emptyTile.style.backgroundImage = "url('Images2/tile_3.jpg')";
             puzzleContainer.classList.add('completed');
             puzzleGrid.classList.add('merging');
             setTimeout(() => {
