--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                     <div class="puzzle-grid-wrap" id="puzzleGridWrap">
                         <div class="puzzle-grid" id="puzzleGrid"></div>
                         <div class="puzzle-full-image-overlay" id="puzzleFullImageOverlay">
-                            <img src="images/full-image.jpg" alt="" />
+                            <img src="image/full-image.jpg" alt="" />
                         </div>
                     </div>
                 </div>
@@ -726,7 +726,7 @@
                     tile.classList.add('empty');
                     // No image: empty space is transparent until puzzle is solved
                 } else {
-                    tile.style.backgroundImage = `url('images/tile_${piece}.jpg')`;
+                    tile.style.backgroundImage = `url('image/tile_${piece}.jpg')`;
                     tile.onclick = () => moveTile(index);
                 }
                 
@@ -760,7 +760,7 @@
             const puzzleRevealText = document.getElementById('puzzleRevealText');
             const puzzleFullImageOverlay = document.getElementById('puzzleFullImageOverlay');
             const emptyTile = puzzleGrid.querySelector('.puzzle-tile.empty');
-            if (emptyTile) emptyTile.style.backgroundImage = "url('images/tile_3.jpg')";
+            if (emptyTile) emptyTile.style.backgroundImage = "url('image/tile_3.jpg')";
             puzzleContainer.classList.add('completed');
             puzzleGrid.classList.add('merging');
             setTimeout(() => {
