--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
             <div id="successView" class="modal-view">
                 <p class="modal-title">Yay, I can't wait!</p>
                 <div class="success-gif-wrap">
-                    <img src="giphy.gif" alt="" />
+                    <img src="giphy2.gif" alt="" />
                 </div>
                 <button type="button" class="reset-btn" id="resetBtn">Reset</button>
             </div>
