--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
 
             <!-- VIEW: Success -->
             <div id="successView" class="modal-view">
-                <p class="modal-title">Yay, I can't wait!</p>
+                <p class="modal-title">Kaytranada date in June !</p>
                 <div class="success-gif-wrap">
                     <img src="giphy2.gif" alt="" />
                 </div>
